# malloc

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  main.c  run.sh  test.sh
.github/workflows/: build-macos.yml  build-ubuntu.yml  c-cpp.yml  macos-testscript.yml  ubuntu-testscript.yml
include/: libc.h  malloc.h  malloc_internal.h  peer_stdlib.h
srcs/: blocks.c  calloc.c  find_spot.c  free.c  globals.c  malloc.c  realloc.c  reallocf.c  shared.c  show_alloc_mem.c  zones.c
srcs/bonus/: defragment.c
srcs/libc/: ft_putchar_fd.c  ft_putnbr_base_fd.c  ft_putstr_fd.c  ft_strlen.c  memcpy.c  memset.c
srcs/logging/: get_loglevel.c  log_alloc.c
srcs/shared/: blocks.c  cleanup.c  find_ptr.c  find_spot.c  globals.c  size.c  t_block.c  t_heap.c  t_zone.c  utilities.c  zones.c
tests/: CMakeLists.txt  test_allocation.c  test_double_free.c  test_free_invalid_ptr.c  test_mix.c  test_multithreaded.c  test_munmap.c  test_realloc_same_size.c  test_realloc_smaller_size.c  test_rlimit.c
tests/correction/: test1.c  test2.c  test4.c  test5.c
